[package]
name = "gim"
description = "commit driven development git-cli command line utility"
version = "0.4.2"
edition = "2021"
repository = "https://github.com/yv-was-taken/gim"
keywords = ["git", "terminal", "CLI", "utility"]
categories = ["development-tools"]
license = "MIT"
readme = "README.md"

[dependencies]
edit = "0.1.5"
